src/components/Project/style.css
/* Custom color variables */
:root {
    --gold-custom: #B7A57A;
    --lightpurple-custom: #EDE4FF;
    --purple-custom: #4B2E83;
}

#portfolio-list img {
    width: 175px;
    height: 175px;
}

.thumbnail-column {
    max-width: 22%!important;
    min-width: 215px!important;
}

.list-group-item .btn {
    color: var(--purple-custom);
    width: 120px;
}

.list-group-item .btn:hover {
    background-color: var(--lightpurple-custom);
}

p.description {
    line-height: 150%;
    font-size: 14pt;
    font-family: 'Roboto', sans-serif;
}

a.btn {
    font-family: 'Encode Sans Condensed', sans-serif;
    font-size: 16pt;
    padding: 5px;
}

@media only screen and (max-width: 991.98px) {
    .project-links {
        display: flex;
        justify-content: space-around;
    }
}

